# DarcEngine

./: .gitignore  CMakeLists.txt  README.md  lbuild.sh  mbuild.sh  wbuild.bat  you_are_right__i_have_nothing_better_to_do_with_my_spare_time.cpp
DarcEngine/: CMakeLists.txt  lbuild.sh  mbuild.sh  wbuild.bat
DarcEngine/Dependencies/GLFW/lib/: glfw3.lib  glfw3_d.lib
DarcEngine/Dependencies/OpenGl/: VERSION.txt
DarcEngine/Dependencies/OpenGl/include/GL/: glut.h
DarcEngine/Dependencies/OpenGl/lib/: gle.lib  glut32.lib  mui.lib
DarcEngine/Src/: CMakeLists.txt
DarcEngine/Src/Application/: CMakeLists.txt  DarcApplication.cpp  DarcApplication.h
DarcEngine/Src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Time.cpp  Time.h
DarcEngine/Src/Graphics/: CMakeLists.txt  Entity.h  Enumerators.h  Graphics.cpp  Graphics.h  Ogre.cpp  Ogre.h  OpenGl.cpp  OpenGl.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h
DarcEngine/Src/Utilities/: CMakeLists.txt  EngineCores.cpp  EngineCores.h  Log.cpp  Log.h
Src/: CMakeLists.txt
Src/App/: App.cpp  App.h  CMakeLists.txt  Main.cpp
dependencies/DarcEngine/: lbuild.sh
dependencies/DarcEngine/Src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
dependencies/DarcEngine/Src/Graphics/: CMakeLists.txt
